// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden field hashes > seed 1: initial state and after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "c6838ca5",
    "boundaryStress": "e2743b1c",
    "crustAge": "cc1b6cde",
    "crustType": "69b4a9d5",
    "elevation": "58e1aec3",
    "iceFraction": "908a3632",
    "marineLife": "b0549dc5",
    "plateId": "9f788842",
    "precipitation": "fc2344bd",
    "sedimentM": "54cb13a2",
    "sutureYears": "20a2447a",
    "temperature": "1799ca45",
    "timeYears": 10000000,
    "windU": "4b9fbd35",
    "windV": "d6885645",
  },
  "initial": {
    "biome": "a7666ca5",
    "boundaryStress": "b0549dc5",
    "crustAge": "012fbce4",
    "crustType": "10946445",
    "elevation": "e44964c0",
    "iceFraction": "b0549dc5",
    "marineLife": "b0549dc5",
    "plateId": "15a8f862",
    "precipitation": "be711940",
    "sedimentM": "b0549dc5",
    "sutureYears": "b0549dc5",
    "temperature": "edda30dc",
    "windU": "32f28705",
    "windV": "2b109c45",
  },
}
`;

exports[`golden field hashes > seed 42: initial state and after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "b129b048",
    "boundaryStress": "e5a1b483",
    "crustAge": "1b6fdaec",
    "crustType": "47774d85",
    "elevation": "cd0c06d7",
    "iceFraction": "49cd0138",
    "marineLife": "4a16c16c",
    "plateId": "b7762ad5",
    "precipitation": "452c6668",
    "sedimentM": "cf263260",
    "sutureYears": "61f1d94b",
    "temperature": "b22708ca",
    "timeYears": 10000000,
    "windU": "eef1a265",
    "windV": "c8c4f845",
  },
  "initial": {
    "biome": "0dfa5ef5",
    "boundaryStress": "b0549dc5",
    "crustAge": "69172c16",
    "crustType": "041eea65",
    "elevation": "4cefbe1d",
    "iceFraction": "b0549dc5",
    "marineLife": "b0549dc5",
    "plateId": "93938d05",
    "precipitation": "5970823a",
    "sedimentM": "b0549dc5",
    "sutureYears": "b0549dc5",
    "temperature": "05e4bd0a",
    "windU": "9e350335",
    "windV": "18f86d55",
  },
}
`;

exports[`golden field hashes > seed 1337: initial state and after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "c9a14048",
    "boundaryStress": "921c344a",
    "crustAge": "2e6f66df",
    "crustType": "80f02b15",
    "elevation": "0b5a420a",
    "iceFraction": "77c87c19",
    "marineLife": "b0549dc5",
    "plateId": "5baf8b98",
    "precipitation": "dd94c13d",
    "sedimentM": "f15cd104",
    "sutureYears": "36684dec",
    "temperature": "3a335966",
    "timeYears": 10000000,
    "windU": "4bc2d7a5",
    "windV": "4f7cbd45",
  },
  "initial": {
    "biome": "02ded838",
    "boundaryStress": "b0549dc5",
    "crustAge": "d7f5b05d",
    "crustType": "da81d005",
    "elevation": "e624cd09",
    "iceFraction": "b0549dc5",
    "marineLife": "b0549dc5",
    "plateId": "44207345",
    "precipitation": "4a9e3318",
    "sedimentM": "b0549dc5",
    "sutureYears": "b0549dc5",
    "temperature": "943c80bd",
    "windU": "4d1f44f5",
    "windV": "c917cae5",
  },
}
`;

exports[`golden field hashes: #88-#91 mechanism prototypes on > bathymetryDatum on, seed 42: after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "e2e31168",
    "boundaryStress": "3470f23d",
    "crustAge": "5df42012",
    "crustType": "8383c658",
    "elevation": "373918c2",
    "iceFraction": "fbb1b22f",
    "marineLife": "4a70a4be",
    "plateId": "830343d2",
    "precipitation": "cd23f547",
    "sedimentM": "25b5b01f",
    "sutureYears": "b0549dc5",
    "temperature": "fc11acd1",
    "timeYears": 10000000,
    "windU": "f4059f85",
    "windV": "5f9a56b5",
  },
}
`;

exports[`golden field hashes: #88-#91 mechanism prototypes on > compactArcs on, seed 42: after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "ef814d05",
    "boundaryStress": "9a4c27d4",
    "crustAge": "135f1f7a",
    "crustType": "87b24a28",
    "elevation": "af140829",
    "iceFraction": "dbe0e446",
    "marineLife": "491ed169",
    "plateId": "af509a9b",
    "precipitation": "f7736d9b",
    "sedimentM": "546f7aaf",
    "sutureYears": "b0549dc5",
    "temperature": "5c6ac1b5",
    "timeYears": 10000000,
    "windU": "8d4cb315",
    "windV": "ed49cff5",
  },
}
`;

exports[`golden field hashes: #88-#91 mechanism prototypes on > crustFates on, seed 42: after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "b129b048",
    "boundaryStress": "e5a1b483",
    "crustAge": "1b6fdaec",
    "crustType": "47774d85",
    "elevation": "30ab9ddb",
    "iceFraction": "c360f407",
    "marineLife": "ca4e76c3",
    "plateId": "b7762ad5",
    "precipitation": "7b643463",
    "sedimentM": "9c67def1",
    "sutureYears": "61f1d94b",
    "temperature": "f4521044",
    "timeYears": 10000000,
    "windU": "291ea125",
    "windV": "e62aca05",
  },
}
`;

exports[`golden field hashes: #88-#91 mechanism prototypes on > emergentArcTaper on, seed 42: after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "a327b035",
    "boundaryStress": "a65207ca",
    "crustAge": "589465cb",
    "crustType": "574f4975",
    "elevation": "cfca0b45",
    "iceFraction": "2111bded",
    "marineLife": "25c0c1b3",
    "plateId": "8cbb4ce5",
    "precipitation": "6f883ad2",
    "sedimentM": "35008121",
    "sutureYears": "b0549dc5",
    "temperature": "e8d8ffd4",
    "timeYears": 10000000,
    "windU": "d9fce145",
    "windV": "664bed95",
  },
}
`;

exports[`golden field hashes: #88-#91 mechanism prototypes on > freeboard on, seed 42: after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "3cec1108",
    "boundaryStress": "3470f23d",
    "crustAge": "5df42012",
    "crustType": "8383c658",
    "elevation": "60950138",
    "iceFraction": "e1fe3d09",
    "marineLife": "34e74d5c",
    "plateId": "830343d2",
    "precipitation": "f1871458",
    "sedimentM": "45a7bf8e",
    "sutureYears": "b0549dc5",
    "temperature": "44eaf33e",
    "timeYears": 10000000,
    "windU": "0b3b82e5",
    "windV": "e6fc96e5",
  },
}
`;

exports[`golden field hashes: #88-#91 mechanism prototypes on > marinePlanation on, seed 42: after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "ff3c0be5",
    "boundaryStress": "3470f23d",
    "crustAge": "5df42012",
    "crustType": "8383c658",
    "elevation": "27a19c3d",
    "iceFraction": "e784ff7e",
    "marineLife": "7e7f29f6",
    "plateId": "830343d2",
    "precipitation": "cd985816",
    "sedimentM": "628d0119",
    "sutureYears": "b0549dc5",
    "temperature": "a7f1bedd",
    "timeYears": 10000000,
    "windU": "3ffed615",
    "windV": "22bcf035",
  },
}
`;

exports[`golden field hashes: #88-#91 mechanism prototypes on > seaLevelDatums on, seed 42: after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "02bce448",
    "boundaryStress": "18e7e76f",
    "crustAge": "f784a166",
    "crustType": "23d4a595",
    "elevation": "6c735458",
    "iceFraction": "c3516af4",
    "marineLife": "f7ac5feb",
    "plateId": "691bdb92",
    "precipitation": "b010fb10",
    "sedimentM": "10c16b38",
    "sutureYears": "b0549dc5",
    "temperature": "dedc2ba7",
    "timeYears": 10000000,
    "windU": "e1fac275",
    "windV": "4b3e2ae5",
  },
}
`;

exports[`golden field hashes: bathymetryDatum engaged (#102) > seed 42, N=32: after 100 steps, with the sea below the engagement level 1`] = `
{
  "after100Steps": {
    "biome": "ba712ab8",
    "boundaryStress": "3266293d",
    "crustAge": "647cc282",
    "crustType": "e89956a8",
    "elevation": "c07efeec",
    "iceFraction": "5f0ed9fe",
    "marineLife": "b5b10c2e",
    "plateId": "7a1aeadb",
    "precipitation": "70d25b59",
    "sedimentM": "f595b731",
    "sutureYears": "fc481361",
    "temperature": "9b94ff69",
    "timeYears": 100000000,
    "windU": "61993e75",
    "windV": "99ba9f05",
  },
}
`;

exports[`golden field hashes: blockIsostasy on (#84) > seed 1: after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "83b09b05",
    "boundaryStress": "94af51be",
    "crustAge": "348c1b00",
    "crustType": "5285f5b5",
    "elevation": "d08119e0",
    "iceFraction": "f4efeeca",
    "marineLife": "b0549dc5",
    "plateId": "1659f272",
    "precipitation": "677ace70",
    "sedimentM": "1a12eb05",
    "sutureYears": "b0549dc5",
    "temperature": "85a5fe1c",
    "timeYears": 10000000,
    "windU": "3942f885",
    "windV": "408c8d15",
  },
}
`;

exports[`golden field hashes: blockIsostasy on (#84) > seed 42: after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "aa6345b8",
    "boundaryStress": "3470f23d",
    "crustAge": "5df42012",
    "crustType": "8383c658",
    "elevation": "2df8c3ed",
    "iceFraction": "4f08a051",
    "marineLife": "56e20c69",
    "plateId": "830343d2",
    "precipitation": "f3c4f6ec",
    "sedimentM": "f90bc780",
    "sutureYears": "b0549dc5",
    "temperature": "d79b5e0d",
    "timeYears": 10000000,
    "windU": "1d7faea5",
    "windV": "1fde7be5",
  },
}
`;

exports[`golden field hashes: blockIsostasy on (#84) > seed 1337: after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "7d1ebe45",
    "boundaryStress": "fb4df36a",
    "crustAge": "f9bebba2",
    "crustType": "0f3eab88",
    "elevation": "6d058a53",
    "iceFraction": "24589704",
    "marineLife": "b0549dc5",
    "plateId": "6e0c87c2",
    "precipitation": "ec3b1676",
    "sedimentM": "8f4bfb92",
    "sutureYears": "b0549dc5",
    "temperature": "6d4825c9",
    "timeYears": 10000000,
    "windU": "d87ba375",
    "windV": "29e0b3f5",
  },
}
`;

exports[`golden field hashes: legacy all-mechanisms-off > seed 1: initial state and after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "03fe7ed8",
    "boundaryStress": "94af51be",
    "crustAge": "348c1b00",
    "crustType": "5285f5b5",
    "elevation": "2ff798c5",
    "iceFraction": "db7fee64",
    "marineLife": "b0549dc5",
    "plateId": "1659f272",
    "precipitation": "09fb7344",
    "sedimentM": "c043034b",
    "sutureYears": "b0549dc5",
    "temperature": "28b7a4ba",
    "timeYears": 10000000,
    "windU": "ad886805",
    "windV": "6f28d0e5",
  },
  "initial": {
    "biome": "a7666ca5",
    "boundaryStress": "b0549dc5",
    "crustAge": "012fbce4",
    "crustType": "10946445",
    "elevation": "e44964c0",
    "iceFraction": "b0549dc5",
    "marineLife": "b0549dc5",
    "plateId": "15a8f862",
    "precipitation": "be711940",
    "sedimentM": "b0549dc5",
    "sutureYears": "b0549dc5",
    "temperature": "edda30dc",
    "windU": "32f28705",
    "windV": "2b109c45",
  },
}
`;

exports[`golden field hashes: legacy all-mechanisms-off > seed 42: initial state and after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "e2e31168",
    "boundaryStress": "3470f23d",
    "crustAge": "5df42012",
    "crustType": "8383c658",
    "elevation": "373918c2",
    "iceFraction": "fbb1b22f",
    "marineLife": "4a70a4be",
    "plateId": "830343d2",
    "precipitation": "cd23f547",
    "sedimentM": "25b5b01f",
    "sutureYears": "b0549dc5",
    "temperature": "fc11acd1",
    "timeYears": 10000000,
    "windU": "f4059f85",
    "windV": "5f9a56b5",
  },
  "initial": {
    "biome": "0dfa5ef5",
    "boundaryStress": "b0549dc5",
    "crustAge": "69172c16",
    "crustType": "041eea65",
    "elevation": "4cefbe1d",
    "iceFraction": "b0549dc5",
    "marineLife": "b0549dc5",
    "plateId": "93938d05",
    "precipitation": "5970823a",
    "sedimentM": "b0549dc5",
    "sutureYears": "b0549dc5",
    "temperature": "05e4bd0a",
    "windU": "9e350335",
    "windV": "18f86d55",
  },
}
`;

exports[`golden field hashes: legacy all-mechanisms-off > seed 1337: initial state and after 10 steps 1`] = `
{
  "after10Steps": {
    "biome": "887eb9b5",
    "boundaryStress": "fb4df36a",
    "crustAge": "f9bebba2",
    "crustType": "0f3eab88",
    "elevation": "dab38eea",
    "iceFraction": "981b1b4c",
    "marineLife": "b0549dc5",
    "plateId": "6e0c87c2",
    "precipitation": "cdaf6979",
    "sedimentM": "7e02b244",
    "sutureYears": "b0549dc5",
    "temperature": "fde2422d",
    "timeYears": 10000000,
    "windU": "060f9b15",
    "windV": "0999dc75",
  },
  "initial": {
    "biome": "02ded838",
    "boundaryStress": "b0549dc5",
    "crustAge": "d7f5b05d",
    "crustType": "da81d005",
    "elevation": "e624cd09",
    "iceFraction": "b0549dc5",
    "marineLife": "b0549dc5",
    "plateId": "44207345",
    "precipitation": "4a9e3318",
    "sedimentM": "b0549dc5",
    "sutureYears": "b0549dc5",
    "temperature": "943c80bd",
    "windU": "4d1f44f5",
    "windV": "c917cae5",
  },
}
`;

exports[`golden field hashes: waterInventoryScale 2.0 (#105) > seed 42: after 10 steps, with the sea flooded above the 0 m datum 1`] = `
{
  "after10Steps": {
    "biome": "169240d5",
    "boundaryStress": "e5a1b483",
    "crustAge": "1b6fdaec",
    "crustType": "47774d85",
    "elevation": "e7ea937e",
    "iceFraction": "2bd2196e",
    "marineLife": "8dc2aa00",
    "plateId": "b7762ad5",
    "precipitation": "9cdb2f9a",
    "sedimentM": "c22b3f08",
    "sutureYears": "61f1d94b",
    "temperature": "aa58530e",
    "timeYears": 10000000,
    "windU": "596643a5",
    "windV": "be9608c5",
  },
}
`;
